QSF - Candidate Referral/src/objects/QSF_RFL_Application_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>QSF_RFL_Application__c</referenceTo>
        <relationshipLabel>Application Attachments</relationshipLabel>
        <relationshipName>Application_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Curriculum Vitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Application Attachment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>